--- a/Javascript_Assignments/Class_Assignment/birthday/style.css
+++ b/Javascript_Assignments/Class_Assignment/birthday/style.css
@@ -9,7 +9,7 @@ body {
 }
 #content {
     background-color: antiquewhite;
-    width: 30vw;
+    width: 250px;
     justify-content: center;
     text-align: center;
 }
